@@ -2,14 +2,11 @@ package com.hotel.controller;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.servlet.http.HttpServletRequest;
 
 import org.modelmapper.ModelMapper;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
-import com.hotel.config.JwtUtil;
 import com.hotel.dto.BookingDTO;
 import com.hotel.model.Booking;
 import com.hotel.model.User;
@@ -24,108 +21,172 @@ public class BookingController {
 
     private final BookingService service;
     private final ModelMapper mapper;
-    private final JwtUtil jwtUtil;
     private final UserService userService;
 
     public BookingController(BookingService service,
                              ModelMapper mapper,
-                             JwtUtil jwtUtil,
                              UserService userService) {
         this.service = service;
         this.mapper = mapper;
-        this.jwtUtil = jwtUtil;
         this.userService = userService;
     }
 
-    // 🔑 COMMON METHOD (avoid duplicate code)
-    private User getUserFromToken(HttpServletRequest request) {
+    // 🔐 Get Logged-in User
+//    private User getUser() {
+//        String email = SecurityContextHolder
+//                .getContext()
+//                .getAuthentication()
+//                .getName();
+//
+//        return userService.findByEmail(email)
+//                .orElseThrow(() -> new RuntimeException("User not found"));
+//    }
+    
+    private User getUser() {
 
-        String authHeader = request.getHeader("Authorization");
+        String email = SecurityContextHolder
+                .getContext()
+                .getAuthentication()
+                .getName();
 
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            throw new RuntimeException("Invalid or missing token");
-        }
-
-        String token = authHeader.substring(7);
-        String email = jwtUtil.extractEmail(token);
+        System.out.println("Email from SecurityContext = " + email);
 
         return userService.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("User not found"));
     }
+    
+    
+
+    private boolean isAdmin() {
+        return SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getAuthorities()
+                .stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+    }
 
     // ✅ CREATE BOOKING
     @PostMapping
-    public Resp<BookingDTO> create(HttpServletRequest request,
-                                   @RequestBody BookingDTO dto) {
+    public Resp<?> create(@RequestBody BookingDTO dto) {
 
-        User user = getUserFromToken(request);
+        User user = getUser();
 
         Booking booking = mapper.map(dto, Booking.class);
-        booking.setUserId(user.getUserId());
+        booking.setUser(user); // ✅ FIXED
 
-        Booking saved = service.createBooking(booking);
-
-        return Resp.success(mapper.map(saved, BookingDTO.class));
+        return Resp.success(
+                mapper.map(service.createBooking(booking), BookingDTO.class)
+        );
     }
 
     // ✅ GET MY BOOKINGS
     @GetMapping("/my")
-    public Resp<List<BookingDTO>> getMyBookings(HttpServletRequest request) {
+    public Resp<?> getMyBookings() {
 
-        User user = getUserFromToken(request);
+        User user = getUser();
 
         List<BookingDTO> list = service.getUserBookings(user.getUserId())
                 .stream()
                 .map(b -> mapper.map(b, BookingDTO.class))
-                .collect(Collectors.toList());
+                .toList();
 
         return Resp.success(list);
     }
 
+    // ✅ ADMIN ONLY
     @GetMapping
-    public Resp<List<BookingDTO>> getAll() {
-        return Resp.success(
-                service.getAllBookings().stream()
-                        .map(b -> mapper.map(b, BookingDTO.class))
-                        .collect(Collectors.toList())
-        );
+    public Resp<?> getAll() {
+
+        if (!isAdmin()) {
+            return Resp.error("Access Denied");
+        }
+
+        List<BookingDTO> list = service.getAllBookings()
+                .stream()
+                .map(b -> mapper.map(b, BookingDTO.class))
+                .toList();
+
+        return Resp.success(list);
     }
 
+    // ✅ GET BY ID
     @GetMapping("/{id}")
-    public Resp<BookingDTO> getById(@PathVariable int id) {
-        return Resp.success(mapper.map(service.getById(id), BookingDTO.class));
+    public Resp<?> getById(@PathVariable int id) {
+
+        Booking booking = service.getById(id);
+
+        if (!isAdmin() && 
+            !booking.getUser().getUserId().equals(getUser().getUserId())) {
+            return Resp.error("Unauthorized");
+        }
+
+        return Resp.success(mapper.map(booking, BookingDTO.class));
     }
 
+    // ✅ UPDATE
     @PutMapping("/{id}")
-    public Resp<BookingDTO> update(@PathVariable int id,
-                                   @RequestBody BookingDTO dto) {
+    public Resp<?> update(@PathVariable int id,
+                          @RequestBody BookingDTO dto) {
+
+        Booking existing = service.getById(id);
+
+        if (!isAdmin() && 
+            !existing.getUser().getUserId().equals(getUser().getUserId())) {
+            return Resp.error("Unauthorized");
+        }
+
+        Booking updated = mapper.map(dto, Booking.class);
 
         return Resp.success(
-                mapper.map(service.updateBooking(id, mapper.map(dto, Booking.class)), BookingDTO.class)
+                mapper.map(service.updateBooking(id, updated), BookingDTO.class)
         );
     }
 
+    // ✅ CANCEL
     @PutMapping("/cancel/{id}")
-    public Resp<String> cancel(@PathVariable int id) {
+    public Resp<?> cancel(@PathVariable int id) {
+
+        Booking booking = service.getById(id);
+
+        if (!isAdmin() && 
+            !booking.getUser().getUserId().equals(getUser().getUserId())) {
+            return Resp.error("Unauthorized");
+        }
+
         service.cancelBooking(id);
-        return Resp.success("Booking Cancelled Successfully");
+        return Resp.success("Booking Cancelled");
     }
 
-    @DeleteMapping("/{id}")
-    public Resp<String> delete(@PathVariable int id) {
-        service.deleteBooking(id);
-        return Resp.success("Booking Deleted Successfully");
-    }
-
+    // ✅ SEARCH (ADMIN)
     @GetMapping("/search")
-    public Resp<List<BookingDTO>> search(@RequestParam String from,
-                                         @RequestParam String to) {
+    public Resp<?> search(@RequestParam String from,
+                          @RequestParam String to) {
 
-        return Resp.success(
-                service.searchByDate(LocalDate.parse(from), LocalDate.parse(to))
-                        .stream()
-                        .map(b -> mapper.map(b, BookingDTO.class))
-                        .collect(Collectors.toList())
-        );
+        if (!isAdmin()) {
+            return Resp.error("Access Denied");
+        }
+
+        List<BookingDTO> list = service.searchByDate(
+                LocalDate.parse(from),
+                LocalDate.parse(to))
+                .stream()
+                .map(b -> mapper.map(b, BookingDTO.class))
+                .toList();
+
+        return Resp.success(list);
     }
+
+    // ✅ DELETE
+    @DeleteMapping("/{id}")
+    public Resp<?> delete(@PathVariable int id) {
+
+        if (!isAdmin()) {
+            return Resp.error("Only Admin");
+        }
+
+        service.deleteBooking(id);
+        return Resp.success("Deleted Successfully");
+    }
+    
+    
 }
